--- a/rnote-ui/data/resources.gresource.xml.in
+++ b/rnote-ui/data/resources.gresource.xml.in
@@ -129,6 +129,7 @@
         <file compressed="true">icons/scalable/actions/stylus-button-primary-symbolic.svg</file>
         <file compressed="true">icons/scalable/actions/stylus-button-secondary-symbolic.svg</file>
         <file compressed="true">icons/scalable/actions/stylus-button-eraser-symbolic.svg</file>
+        <file compressed="true">icons/scalable/actions/actionpad-longpress-symbolic.svg</file>
         <file compressed="true">icons/scalable/actions/mouse-button-primary-symbolic.svg</file>
         <file compressed="true">icons/scalable/actions/mouse-button-secondary-symbolic.svg</file>
         <file compressed="true">icons/scalable/actions/workspacelistentryicon-bank-symbolic.svg</file>
