--- a/rnote-compose/src/meson.build
+++ b/rnote-compose/src/meson.build
@@ -15,6 +15,9 @@ rnote_compose_sources = files(
     'builders/quadrantcoordsystem2dbuilder.rs',
     'builders/shapebuilderbehaviour.rs',
     'builders/penpathbuilderbehaviour.rs',
+    'gestures/mod.rs',
+    'gestures/gesturebehaviour.rs',
+    'gestures/clicks.rs',
     'penpath/element.rs',
     'penpath/mod.rs',
     'penpath/segment.rs',
